<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.OverWeightActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/ow_header_color"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:fontFamily="@font/convergence"
                android:padding="8dp"
                android:text="DIET plan for Over Weight"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingRight="16dp">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <RadioButton
                        android:id="@+id/btnEng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/white"
                        android:checked="true"
                        android:text="English"
                        android:textColor="@color/white"
                        android:textSize="10sp" />

                    <RadioButton
                        android:id="@+id/btnUrdu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/white"
                        android:text="اردو"
                        android:textColor="@color/white"
                        android:textSize="10sp" />


                </RadioGroup>

            </LinearLayout>


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_margin="8dp"
            android:elevation="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                    android:id="@+id/carousel"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    app:autoPlay="true"
                    app:bottomShadowAlpha="0.2"
                    app:showCaption="false"
                    app:showNavigationButtons="false"
                    app:topShadowAlpha="0.1" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/follow_the_given_diet"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/after_wake_up"
                    android:textAllCaps="true"
                    android:textColor="@color/green"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="6dp"
                        android:gravity="center"
                        android:text="@string/zeera"
                        android:textAllCaps="true"
                        android:textColor="@color/color"
                        android:textSize="14sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/break_fast_ow"
                    android:textAllCaps="true"
                    android:textColor="@color/green"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="6dp"
                        android:gravity="center"
                        android:text="@string/bf_diet"
                        android:textAllCaps="true"
                        android:textColor="@color/color"
                        android:textSize="14sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/lunch"
                    android:textAllCaps="true"
                    android:textColor="@color/green"
                    android:textSize="16sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@string/take_any_vegetable_s_salan_with_1_roti_bread"
                        android:textAllCaps="true"
                        android:textColor="@color/color"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/evening"
                    android:textAllCaps="true"
                    android:textColor="@color/green"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="6dp"
                        android:gravity="center"
                        android:text="@string/eat_any_fruit"
                        android:textAllCaps="true"
                        android:textColor="@color/color"
                        android:textSize="14sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/dinner"
                    android:textAllCaps="true"
                    android:textColor="@color/green"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="6dp"
                        android:gravity="center"
                        android:text="@string/repeat_lunch_diet"
                        android:textAllCaps="true"
                        android:textColor="@color/color"
                        android:textSize="14sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/_2_days_in_a_week"
                    android:textAllCaps="true"
                    android:textColor="@color/green"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@string/_2_days_in_a_week_eat_any_one_of_the_given_in_your_dinner_red_beans_vegetable_salad_chicken_salan_soup_or_boiled_grams_chana"
                        android:textAllCaps="true"
                        android:textColor="@color/color"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/thing_do_not_eat"
                    android:textAllCaps="true"
                    android:textColor="@color/green"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="6dp"
                        android:gravity="center"
                        android:text="@string/potato_paratha_junk_food_and_rice"
                        android:textAllCaps="true"
                        android:textColor="@color/color"
                        android:textSize="14sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/skip"
                    android:textAllCaps="true"
                    android:textColor="@color/green"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </ScrollView>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="FULL_BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.gms.ads.AdView>




</androidx.constraintlayout.widget.ConstraintLayout>